Fix spacing between cells in the color picker

--- a/packages/office-ui-fabric-react/src/components/SwatchColorPicker/SwatchColorPicker.scss
+++ b/packages/office-ui-fabric-react/src/components/SwatchColorPicker/SwatchColorPicker.scss
@@ -55,6 +55,7 @@
 .cell {
   padding: 0px;
   overflow: visible;
+  height: 24px;
 
   &.cellIsSelected {
     &:hover .svg,
